kuberManifest/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-demo
  labels:
    app: hello-demo
spec:
  containers:
  - name: hello-demo
    image: vitshevl/otus-homework-1:1.0.1
    ports:
      - containerPort: 8000
