kuberManifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw1-service
spec:
  selector:
    app: otus-hw1-pod
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
