kuberManifest/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: hello.world
    http:
      paths:
        - path: /test
          backend:
            serviceName: otus-hw1-service
            servicePort: 8000
